<resources>
    <string name="app_name">DelivMap</string>
    <string name="scan_button">Scan &amp; Extract Address</string>
    <string name="add_stop">Add Stop</string>
    <string name="use_my_location">Use My Location as Start</string>
    <string name="optimize_route">Optimize &amp; Route</string>
    <string name="navigate">Navigate</string>
    <string name="route_summary_placeholder">Route summary will appear here.</string>
    <string name="google_maps_key">YOUR_GOOGLE_MAPS_API_KEY_HERE</string>
    <string name="no_candidates_message">No address-like text detected. You can still set a start point and add stops manually.</string>
    <string name="optimize_results">Total Distance: %1$.1f km\nEstimated Time: %2$d min</string>
    <string name="start_marker">Start</string>
    <string name="stop_marker">Stop %1$d</string>
</resources>
